[gd_scene load_steps=16 format=3 uid="uid://dguohmgfd7bvg"]

[ext_resource type="Script" path="res://scenes/coin.gd" id="1_30v4n"]
[ext_resource type="Texture2D" uid="uid://fv3jww6jom10" path="res://assets/coin/tile_0151.png" id="1_rkfol"]
[ext_resource type="PackedScene" uid="uid://dnqbns67tb2xc" path="res://scenes/util/random_audio_stream_player.tscn" id="2_8vxdl"]
[ext_resource type="Texture2D" uid="uid://6t5jrb44nig8" path="res://assets/coin/tile_0152.png" id="2_o6o3j"]
[ext_resource type="AudioStream" uid="uid://dulqwh7ci6od1" path="res://assets/sounds/impactGlass_heavy_000.ogg" id="3_78rul"]
[ext_resource type="AudioStream" uid="uid://r0143uno0fcf" path="res://assets/sounds/glass_004.ogg" id="3_b1ui7"]
[ext_resource type="AudioStream" uid="uid://bb5dncbm2fkep" path="res://assets/sounds/impactGlass_heavy_001.ogg" id="4_cqbj6"]
[ext_resource type="AudioStream" uid="uid://bcnkhy3msc7vq" path="res://assets/sounds/impactGlass_heavy_002.ogg" id="5_y6gyo"]
[ext_resource type="AudioStream" uid="uid://bn3xy7tq43n5i" path="res://assets/sounds/impactGlass_heavy_003.ogg" id="6_2qbsu"]
[ext_resource type="AudioStream" uid="uid://tibx6i1xlee0" path="res://assets/sounds/impactGlass_heavy_004.ogg" id="7_3iyfc"]

[sub_resource type="Animation" id="Animation_4pt6y"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_ekucf"]
resource_name = "pickup"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -16), Vector2(0, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a06c0"]
_data = {
"idle": SubResource("Animation_4pt6y"),
"pickup": SubResource("Animation_ekucf")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_mh5sx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rkfol")
}, {
"duration": 1.0,
"texture": ExtResource("2_o6o3j")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8yoys"]
radius = 8.0

[node name="Coin" type="Node2D" groups=["coin"]]
script = ExtResource("1_30v4n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_a06c0")
}

[node name="RandomAudioStreamPlayer" parent="." instance=ExtResource("2_8vxdl")]
numberToPlay = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer"]
stream = ExtResource("3_b1ui7")
volume_db = -15.0
bus = &"SFX"

[node name="RandomAudioStreamPlayer2" parent="." instance=ExtResource("2_8vxdl")]
numberToPlay = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer2"]
stream = ExtResource("3_78rul")
volume_db = -12.0
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer2"]
stream = ExtResource("4_cqbj6")
volume_db = -12.0
bus = &"SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer2"]
stream = ExtResource("5_y6gyo")
volume_db = -12.0
bus = &"SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer2"]
stream = ExtResource("6_2qbsu")
volume_db = -12.0
bus = &"SFX"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="RandomAudioStreamPlayer2"]
stream = ExtResource("7_3iyfc")
volume_db = -12.0
bus = &"SFX"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7.89382)
sprite_frames = SubResource("SpriteFrames_mh5sx")
autoplay = "default"
frame_progress = 0.833302

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8yoys")

[connection signal="area_entered" from="Area2D" to="." method="on_area_entered"]
